[gd_scene load_steps=4 format=3 uid="uid://dpec4txhmvtbd"]

[ext_resource type="Texture2D" uid="uid://iwq4vk6crq5l" path="res://sprites/iconInimigo.png" id="1_8by3e"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_ebk1l"]

[sub_resource type="ImageTexture" id="ImageTexture_3rsdg"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ebk1l")

[node name="slider" type="HSlider" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 100.0
offset_top = 4.0
offset_right = -100.0
offset_bottom = 12.0
grow_horizontal = 2
size_flags_stretch_ratio = 0.0
focus_mode = 0
mouse_filter = 2
theme_override_icons/grabber = SubResource("ImageTexture_3rsdg")
value = 35.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_right = 64.5
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="iconInimigos" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_8by3e")
stretch_mode = 3

[node name="labelInimigos" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Inimigos:"

[node name="numInimigos" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "9999"

[node name="sliderHp" type="HSlider" parent="."]
self_modulate = Color(0, 1, 0, 1)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -12.0
offset_right = 150.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
size_flags_stretch_ratio = 0.0
focus_mode = 0
mouse_filter = 2
theme_override_icons/grabber = SubResource("ImageTexture_3rsdg")
value = 35.0

[node name="labelHp" type="Label" parent="sliderHp"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.5
offset_top = -10.0
offset_right = 5.5
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "HP: 100"

[node name="rectPause" type="ColorRect" parent="."]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.188235, 0.301961, 0.701961)

[node name="labelPause" type="Label" parent="rectPause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -84.0
offset_right = 76.5
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Pause"
horizontal_alignment = 1

[node name="butContinuar" type="Button" parent="rectPause"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 18.0
offset_right = 80.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "Continuar"

[node name="butHome" type="Button" parent="rectPause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 75.0
offset_right = 80.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
text = "Home"

[node name="rectVitoria" type="ColorRect" parent="."]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.341176, 0, 0.701961)

[node name="labelVitoria" type="Label" parent="rectVitoria"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -84.0
offset_right = 76.5
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Vitória"

[node name="butProxima" type="Button" parent="rectVitoria"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 18.0
offset_right = 80.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "Próxima Fase"

[node name="butHome" type="Button" parent="rectVitoria"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 75.0
offset_right = 80.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
text = "Home"

[node name="rectDerrota" type="ColorRect" parent="."]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.341176, 0, 0, 0.701961)

[node name="labelDerrota" type="Label" parent="rectDerrota"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -84.0
offset_right = 76.5
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Derrota"

[node name="butReiniciar" type="Button" parent="rectDerrota"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 18.0
offset_right = 80.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "Reiniciar"

[node name="butHome" type="Button" parent="rectDerrota"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 75.0
offset_right = 80.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
text = "Home"

[node name="timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="rectPause/butContinuar" to="." method="_on_butContinuar_pressed"]
[connection signal="pressed" from="rectPause/butHome" to="." method="_on_butHome_pressed"]
[connection signal="pressed" from="rectVitoria/butProxima" to="." method="_on_butProxima_pressed"]
[connection signal="pressed" from="rectVitoria/butHome" to="." method="_on_butHome_pressed"]
[connection signal="pressed" from="rectDerrota/butReiniciar" to="." method="_on_butReiniciar_pressed"]
[connection signal="pressed" from="rectDerrota/butHome" to="." method="_on_butHome_pressed"]
